<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.propertylistings.activities.PropertyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/propertyAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_propertyAddress"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                    <NumberPicker
                        android:id="@+id/propertyBedrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="66dp"
                        android:layout_margin="8dp"
                        android:layout_marginStart="20dp"
                        android:autofillHints="hint"
                        android:hint="@string/hint_propertyBedrooms"
                        android:inputType="" />

                    <TextView
                        android:id="@+id/textBeds"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:text="@string/numbbedrooms" />

                    <NumberPicker
                        android:id="@+id/propertyBathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="66dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/textBaths"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:text="@string/numbathrooms" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="67dp" >

                    <NumberPicker
                        android:id="@+id/propertyPrice"
                        android:layout_width="270dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:autofillHints="hint"
                        android:hint="@string/hint_propertyDescription"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/textPrice"
                        android:layout_width="103dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:text="@string/Price" />

                </TableRow>

                <EditText
                    android:id="@+id/propertyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_propertyDescription"
                    android:inputType="text"
                    android:maxLength="250"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/propertyImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/propertyLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addProperty"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>